[gd_scene load_steps=11 format=3 uid="uid://dgyg468y4vr6w"]

[ext_resource type="Script" uid="uid://je6xx4fm0oh4" path="res://Scripts/Gameplay/tetris_manager.gd" id="1_7cpae"]
[ext_resource type="Resource" uid="uid://cxisf7sx1lcse" path="res://Data/drop_frame_intervals.tres" id="2_2wuxp"]
[ext_resource type="PackedScene" uid="uid://qabb27ubsbjd" path="res://Scenes/General/input_handler.tscn" id="2_gy7op"]
[ext_resource type="Resource" uid="uid://bmwt7ao31jxvc" path="res://Data/score_rules.tres" id="3_3kiel"]
[ext_resource type="PackedScene" uid="uid://whceyfg610cp" path="res://Scenes/General/t_grid.tscn" id="3_ilvt5"]
[ext_resource type="PackedScene" uid="uid://5q2k55tkrw0o" path="res://Scenes/General/piece_spawner.tscn" id="3_s36ej"]
[ext_resource type="Resource" uid="uid://b5niot51iuiyy" path="res://Data/line_clear_sound_effects.tres" id="4_mm7po"]
[ext_resource type="Resource" uid="uid://knm4wgjw4v5o" path="res://Data/tetris_score_rules.tres" id="4_qrra4"]
[ext_resource type="AudioStream" uid="uid://bfwerx184ojgq" path="res://Audio/SFX/game_over.ogg" id="5_0rma8"]
[ext_resource type="PackedScene" uid="uid://libj6ut7phxu" path="res://Scenes/General/piece_holder.tscn" id="6_phmmh"]

[node name="TetrisManager" type="Node2D" node_paths=PackedStringArray("_input_handler", "_spawner", "_grid", "_piece_holder", "_das_timer")]
script = ExtResource("1_7cpae")
_input_handler = NodePath("InputHandler")
_spawner = NodePath("PieceSpawner")
_grid = NodePath("TGrid")
_piece_holder = NodePath("PieceHolder")
_das_timer = NodePath("DASUpdateTimer")
_drop_frame_intervals = ExtResource("2_2wuxp")
_dupartitris_score_rules = ExtResource("3_3kiel")
_classic_tetris_score_rules = ExtResource("4_qrra4")
_line_clear_sound_effects = ExtResource("4_mm7po")
_game_over_sfx = ExtResource("5_0rma8")

[node name="InputHandler" parent="." instance=ExtResource("2_gy7op")]

[node name="TGrid" parent="." instance=ExtResource("3_ilvt5")]

[node name="PieceSpawner" parent="." instance=ExtResource("3_s36ej")]
position = Vector2(100, -170)

[node name="DASUpdateTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PieceHolder" parent="." instance=ExtResource("6_phmmh")]
position = Vector2(-100, -150)

[connection signal="das_changed" from="InputHandler" to="." method="_set_das_enabled"]
[connection signal="hard_drop_pressed" from="InputHandler" to="." method="_on_hard_drop_pressed"]
[connection signal="hold_pressed" from="InputHandler" to="." method="_on_hold_pressed"]
[connection signal="horizontal_input_changed" from="InputHandler" to="." method="_on_horizontal_input_changed"]
[connection signal="pause_pressed" from="InputHandler" to="." method="pause"]
[connection signal="rotate_clockwise_pressed" from="InputHandler" to="." method="_on_rotate_clockwise_pressed"]
[connection signal="rotate_counterclockwise_pressed" from="InputHandler" to="." method="_on_rotate_counterclockwise_pressed"]
[connection signal="soft_drop_input_changed" from="InputHandler" to="." method="_set_is_soft_dropping"]
[connection signal="timeout" from="DASUpdateTimer" to="." method="_on_das_timer_timeout"]
